@@ -20,6 +20,7 @@ NEW: [features/enhancements]
 brackets and parens.
 +Autocomp and calltip shortcuts are now customizable.
 +Add Bookmark manager window to Shelf
++Support storing/loading user configuration from XDG standard location on Linux.
 
 LIBRARY:
 +Support ControlBars in on left and right side of ControlBox.
